testing now reads all config files yet still has issues. login forms on navbar are aligned

--- a/front-end/app/navbar/navbar.component.scss
+++ b/front-end/app/navbar/navbar.component.scss
@@ -6,17 +6,8 @@
   border-radius: 2px;
   color: #eee;
 }
-.loginForm{
+#login{
   float: right;
-  height: 10px;
-}
-
-#login {
   margin-top: 10px;
   height: 25px;
-}
-#loginButton{
-  height: 25px;
-  vertical-align: center;
-  margin-top: 10px;
 }
